# ovis_robotiq_gripper

./: .gitignore  README.md
ovis_robotiq_gripper/: CMakeLists.txt  package.xml  setup.py
ovis_robotiq_gripper/launch/: robotiq_gripper.launch  robotiq_gripper_solo.launch
ovis_robotiq_gripper/msg/: OvisGripperPosition.msg  OvisGripper_robot_input.msg  OvisGripper_robot_output.msg
ovis_robotiq_gripper/nodes/: gripper_constants.py  ovis_gripper_control.py
ovis_robotiq_gripper/src/ovis_robotiq_gripper/: baseRobotiq2FGripper.py
robotiq_2f_gripper_control/: CMakeLists.txt
robotiq_2f_gripper_control/launch/: robotiq_gripper.launch  robotiq_gripper_solo.launch
robotiq_2f_gripper_control/nodes/: ovis_robotiq_gripper.py
